--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_FLAGS "-mpopcnt -O3 -msse4.2")
 
 add_definitions(-fopenmp)
 
-add_executable(Sodoku_Solver main.cpp Board.cpp Board.h Square.cpp Square.h BruteForce.cpp BruteForce.h BoardWrapper.cpp BoardWrapper.h Common.cpp Crooks.cpp Crooks.h Solver.cpp Solver.h BruteForceBasicChecks.cpp BruteForceBasicChecks.h)
+add_executable(Sodoku_Solver main.cpp Board.cpp Square.cpp BruteForce.cpp BoardWrapper.cpp Common.cpp Crooks.cpp Solver.cpp BruteForceBasicChecks.cpp)
 
 find_package(OpenMP REQUIRED)
 target_link_libraries(Sodoku_Solver PRIVATE OpenMP::OpenMP_CXX)
